--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   </main>
 
   <footer>
-    <div id="footerText">© 2025 Timer-Activity. Contact: <a href="https://t.me/StayOnlineTeam">t.me/StayOnlineTeam</a></div>
+    <div id="footerText">© 2025 Timer-Activity. Contact: <a href=\"mailto:info@kandval.com">info@kandval.com</a></div>
   </footer>
 
 <script> 
