--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         feature3: "🔒 Безопасен: не требует прав администратора",
         feature4: "⚙️ Работает без установки, по двойному клику",
         feature5: "🎁 Есть демо-версия для проверки совместимости с вашим компьютером",
-        button: "Скачать демо",
+        button: "Скачать демо версию",
         buttonAlt: "Заказать рабочую версию",
         checkText: "Проверьте после загрузки:",
         footer: '© 2025 Timer-Activity. Для связи: <a href="mailto:info@kandval.com">info@kandval.com</a>'
@@ -153,7 +153,8 @@
     feature3: "🔒 Sicher: erfordert keine Administratorrechte",
     feature4: "⚙️ Doppelklick zum Starten",
     feature5: "🎁 Demoversion verfügbar, um die Kompatibilität mit Ihrem Computer zu prüfen",
-    button: "Demo herunterladen",
+    button: "Demo-Version herunterladen",
+    buttonAlt: "Vollversion bestellen",
     checkText: "Nach dem Herunterladen überprüfen:",
     footer: '© 2025 Timer-Activity. Kontakt: <a href=\"mailto:info@kandval.com">info@kandval.com</a>'
   },
@@ -164,7 +165,8 @@
     feature3: "🔒 Sûr : ne nécessite pas de droits d’administrateur",
     feature4: "⚙️ Double-cliquez pour lancer",
     feature5: "🎁 Version de démonstration disponible pour vérifier la compatibilité avec votre ordinateur",
-    button: "Télécharger la démo",
+    button: "Télécharger la version de démonstration",
+    buttonAlt: "Commander la version complète",
     checkText: "Vérifiez après le téléchargement:",
     footer: '© 2025 Timer-Activity. Contact : <a href=\"mailto:info@kandval.com">info@kandval.com</a>'
   },
@@ -175,7 +177,8 @@
     feature3: "🔒 Seguro: no requiere permisos de administrador",
     feature4: "⚙️ Simplemente haz doble clic para ejecutar",
     feature5: "🎁 Versión demo disponible para comprobar la compatibilidad con su computadora",
-    button: "Descargar demo",
+    button: "Descargar versión de demostración",
+buttonAlt: "Pedir versión completa",
     checkText: "Verifique después de descargar:",
     footer: '© 2025 Timer-Activity. Contacto: <a href=\"mailto:info@kandval.com">info@kandval.com</a>'
   },
@@ -186,7 +189,8 @@
     feature3: "🔒 安全: 无需管理员权限",
     feature4: "⚙️ 双击即可运行",
     feature5: "🎁 提供演示版，可用于检测您的电脑兼容性",
-    button: "下载演示",
+    button: "下载演示版本",
+  buttonAlt: "订购正式版本",
     checkText: "下载后验证：",
     footer: '© 2025 Timer-Activity。联系方式：<a href=\"mailto:info@kandval.com">info@kandval.com</a>'
   },
@@ -197,7 +201,8 @@
     feature3: "🔒 Seguro: não requer privilégios de administrador",
     feature4: "⚙️ Basta clicar duas vezes para executar",
     feature5: "🎁 Versão demo disponível para verificar a compatibilidade com o seu computador",
-    button: "Baixar demo",
+    button: "Baixar versão de demonstração",
+buttonAlt: "Solicitar versão completa",
     checkText: "Verifique após o download:",
     footer: '© 2025 Timer-Activity. Contato: <a href=\"mailto:info@kandval.com">info@kandval.com</a>'
   }
@@ -258,4 +263,3 @@
   </script>
 </body>
 </html>
-
