--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </section>
 
       <div class="button-row">
-        <button class="cta-button" id="orderBtn" onclick="window.location.href='mailto:info@kandval.com';">
+        <button class="cta-button" id="orderBtn" onclick="window.location.href='https://kandval-backend.onrender.com';">
           Заказать рабочую версию
         </button>
         <button class="cta-button" id="downloadBtn" onclick="window.location.href='https://github.com/website2020/timer-activity/releases/download/v0.1-demo/demo_test.zip';">
