--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         feature4: "⚙️ Работает без установки, по двойному клику",
         feature5: "🎁 Есть демо-версия для проверки совместимости с вашим компьютером",
         button: "Скачать демо версию",
-        buttonAlt: "Заказать рабочую версию",
+        buttonAlt: "Заказать рабочую",
         checkText: "Проверьте после загрузки:",
         footer: '© 2025 Timer-Activity. Для связи: <a href="mailto:info@kandval.com">info@kandval.com</a>'
       },
