--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="button-row">
         <button class="cta-button" id="orderBtn"                     
          //onclick="window.location.href='https://kandval-backend.onrender.com';">
-         Заказать рабочую
+         Заказать рабочую версию
         </button>
         <button class="cta-button" id="downloadBtn"   
           onclick="window.location.href='https://github.com/website2020/timer- 
@@ -143,7 +143,7 @@
         feature4: "⚙️ Работает без установки, по двойному клику",
         feature5: "🎁 Есть демо-версия для проверки совместимости с вашим компьютером",
         button: "Скачать демо версию",
-        buttonAlt: "Заказать рабочую",
+        buttonAlt: "Заказать рабочую версию",
         checkText: "Проверьте после загрузки:",
         footer: '© 2025 Timer-Activity. Для связи: <a href="mailto:info@kandval.com">info@kandval.com</a>'
       },
