--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
          Заказать рабочую версию
         </button>
         <button class="cta-button" id="downloadBtn"   
-          onclick="window.location.href='https://github.com/website2020/timer- 
-          activity/releases/download/v0.1-demo/demo_test.zip';">
+          onclick="window.location.href='https://github.com/website2020/timer-activity/releases/download/v0.1-demo/demo_test.zip';">
           Скачать демо версию
         </button>
       </div>
